# arecorder

./: .gitignore  CMakeLists.txt  README.md  app.qrc  arecorder_zh_CN.ts  audio_manager.cpp  audio_manager.h  audio_rec_thread.cpp  audio_rec_thread.h  audio_resample.cpp  audio_resample.h  config.h  ffmpeg_codecs.hpp  ffmpeg_util.h  ffmpegvideoseek.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mk_i18n.bat  newgroupbox.cpp  newgroupbox.h  qtoast.cpp  qtoast.h  tracer.h  vbconfig.json  voicebata_zh_CN.ts
res/: BasicTheme.qss
res/i18n/: arecorder_zh_CN.qm
tests/: audio_rec_thread.cpp  ffmpeg_reverse.cc
